classDiagram
    direction LR

    %% Classes
    class Texture {
        +String seed
        +String body
        +int[] styleIndex
        +int[] visibleIndex
        +String[] styles

        +preGenerate(int size)
        +fetchChunk(int from, int to)
    }
    class StyleTuple {
        +String fg
        +String bg
    }
    Texture "1" *-- "0..*" StyleTuple : contains / parses into

    class Color {
        <<utility>>
        +String RESET
        +boolean isBackgroundCode(String ansiCode)
        +String generateRGB(int R, int G, int B)
        +String generateRGB(boolean isBackground, int R, int G, int B)
    }
    class Template {
        +String BASE
        +String BASERGB
    }
    Color *-- Template : static inner class
    note for Color "Used by client code to generate styled strings.\nStyleTuple does NOT depend on Color,
                    but contains the codes generated by Color at runtime."

    class Widget {
        <<abstract>>
    }
    class EntryBox
    class TextBox
    class Image
    %% extends:
    EntryBox --|> Widget
    TextBox --|> Widget
    Image --|> Widget

    class DisplayCore {
        +Terminal terminal
        +int cols
        +int rows
        +int frameBodySize
        +String frameBody

        +refreshDisplayDimensions()
        +enterAltBuffer()
        +exitAltBuffer()
        +enterRawMode()
        +exitRawMode()
        +init()
        +close()
        +refreshDisplay()
        +isTerminalAltBufferCompatible()
    }
    class AutoCloseable {
        <<interface>>
        +close()
    }
    class Displayer {
        +String frameBodyPrevious
        +Layer[] layers

        +renderFrame()
        +refreshDisplay()
        +renderWindow(int layer_index, int window_index)
    }
    class Layer {
        +Window[] components

        +fetchWindow(int index)
        +fetchTotalCoverageMap()
    }
    class Window {
        +Texture texture
        +Widget[] components

        +fetchRenderFull()
        +fetchRenderStripe(int from, int to)
    }
    DisplayCore ..|> AutoCloseable : implements
    Displayer --|> DisplayCore : extends
    note for Displayer "disp() overrides DisplayCore.disp()"
    Displayer "1" *-- "0..*" Layer : contains and manages
    Layer "1" *-- "0..*" Window : windows occupying the layer
    Window "1" *-- "0..*" Widget : components

    class User {
        <<actor>>
    }
    note for User "Interacts with the UI"
    class Developer {
        <<actor>>
    }
    note for Developer "Structures and builds the UI"

    Developer ..> Color : uses / builds
    Developer ..> Texture : uses / builds
    Developer ..> Widget : uses / builds
    Developer ..> Layer : uses / builds
    Developer ..> Window : uses / builds
    User ..> Window : interacts with
    User ..> Widget : interacts with


